--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,399 +3,387 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
 
 body {
-	font-size: 16px;
-	font-family: "Open Sans", sans-serif;
-	color: #474646;
-	line-height: 1.3;
-	max-width: 75rem;
-	margin: 0 auto;
+    font-size: 16px;
+    font-family: "Open Sans", sans-serif;
+    color: #474646;
+    line-height: 1.3;
+    max-width: 75rem;
+    margin: 0 auto;
 }
 
 /* Header */
 
 header {
-	height: 4rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0 1.5rem;
+    height: 4rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.5rem;
 }
 
 header .logo img {
-	vertical-align: middle;
+    vertical-align: middle;
 }
 
 header .logo .colmar,
 header .logo .academy {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 
 header .logo .academy {
-	color: lightgrey;
+    color: lightgrey;
 }
 
 header ul li {
-	display: inline-block;
-	margin-left: 1rem;
+    display: inline-block;
+    margin-left: 1rem;
 }
 
 @media only screen and (min-width: 480px) {
-	header .mobile {
-		display: none;
-	}
+    header .mobile {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 479px) {
-	.desktop {
-		display: none;
-	}
-
-	.mobile {
-		display: flex;
-		width: 100%;
-		justify-content: space-between;
-	}
+    .desktop {
+        display: none;
+    }
+    .mobile {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+    }
 }
 
 /* Banner */
 
 .banner {
-	padding: 2rem 1.5rem;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	background-color: lightgrey;
+    padding: 2rem 1.5rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: lightgrey;
 }
 
 .banner img {
-	width: 60%;
-	height: auto;
-	margin-right: 2.5rem;
+    width: 60%;
+    height: auto;
+    margin-right: 2.5rem;
 }
 
 .banner .info h1 {
-	font-size: 2rem;
-	font-weight: bold;
-	margin-bottom: 1rem;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 1rem;
 }
 
 .banner .info p {
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
 .banner .info a {
-	display: block;
-	padding: 0.5rem;
-	background-color: #525252;;
-	color: white;
-	text-align: center;
+    display: block;
+    padding: 0.5rem;
+    background-color: #525252;
+    color: white;
+    text-align: center;
 }
 
 @media only screen and (max-width: 479px) {
-	.banner {
-		flex-direction: column;
-		padding: 0;
-	}
-
-	.banner img {
-		width: 100%;
-		margin: 0;
-	}
-
-	.banner .info {
-		padding: 2rem 1rem;
-	}
-
-	.banner .info h1 {
-		margin-bottom: 2rem;
-	}
-
-	.banner .info p {
-		margin-bottom: 1.5rem;
-	}
+    .banner {
+        flex-direction: column;
+        padding: 0;
+    }
+    .banner img {
+        width: 100%;
+        margin: 0;
+    }
+    .banner .info {
+        padding: 2rem 1rem;
+    }
+    .banner .info h1 {
+        margin-bottom: 2rem;
+    }
+    .banner .info p {
+        margin-bottom: 1.5rem;
+    }
 }
 
 /* Information section */
 
 .information {
-	display: inline-flex;
+    display: inline-flex;
 }
 
 .information .left {
-	padding: 2rem 1.5rem 0 1.5rem;
-	position: relative;
+    padding: 2rem 1.5rem 0 1.5rem;
+    position: relative;
 }
 
 .information .left img {
-	width: 100%;
-	height: auto;
+    width: 100%;
+    height: auto;
 }
 
 .information .left h2 {
-	margin-top: 2rem;
-	margin-bottom: 1.5rem;
-	font-size: 1.5rem;
+    margin-top: 2rem;
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
 }
 
 .information .left p {
-	font-size: 1rem;
-	margin-bottom: 3rem;
+    font-size: 1rem;
+    margin-bottom: 3rem;
 }
 
 .information .left .img-footer {
-	position: absolute;
-	bottom: 0;
-	padding-bottom: 1rem;
+    position: absolute;
+    bottom: 0;
+    padding-bottom: 1rem;
 }
 
 .information .right {
-	min-width: 26.4375rem;
-	border-left: 1px solid lightgrey;
+    min-width: 26.4375rem;
+    border-left: 1px solid lightgrey;
 }
 
 .information .right .box {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .information .right .box:first-child {
-	border-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
 }
 
 .information .right .box:last-child {
-	background-color: #D8D8D8;
+    background-color: #D8D8D8;
 }
 
 .information .right .box img {
-	width: 35%;
-	height: auto;
-	margin: 1rem;
+    width: 35%;
+    height: auto;
+    margin: 1rem;
 }
 
 .information .right .box h3 {
-	font-size: 1.5rem;
-	margin-bottom: 0.5rem;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .information .right .box p {
-	margin-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 @media only screen and (max-width: 479px) {
-
-	.information .right {
-		min-width: 100%;
-	}
-
-	.information .right .box {
-		align-items: initial;
-		flex-direction: column;
-		padding: 1rem;
-	}
-
-	.information .right .box img {
-		width: 100%;
-		margin: 0;
-	}
-
-	.information-orientation {
-		content: url(../images/information-orientation-mobile.jpg);
-	}
-
-	.information-campus {
-		content: url(../images/information-campus-mobile.jpg);
-	}
-
-	.information-guest-lecture {
-		content: url(../images/information-guest-lecture-mobile.jpg);
-	}
-
-	.information .right .box .copy {
-		padding: 1rem;
-	}
-	.information .right .box:last-child {
-		background-color: white;
-		padding-bottom: 2rem;
-	}
+    .information .right {
+        min-width: 100%;
+    }
+    .information .right .box {
+        align-items: initial;
+        flex-direction: column;
+        padding: 1rem;
+    }
+    .information .right .box img {
+        width: 100%;
+        margin: 0;
+    }
+    .information-orientation {
+        content: url(../images/information-orientation-mobile.jpg);
+    }
+    .information-campus {
+        content: url(../images/information-campus-mobile.jpg);
+    }
+    .information-guest-lecture {
+        content: url(../images/information-guest-lecture-mobile.jpg);
+    }
+    .information .right .box .copy {
+        padding: 1rem;
+        font-weight: 500;
+    }
+    .information .right .box:last-child {
+        background-color: white;
+        padding-bottom: 2rem;
+    }
 }
 
 /* Learning */
 
 .learning {
-	padding: 2rem;
-	background: #EAEBEC;
+    padding: 2rem;
+    background: #EAEBEC;
 }
 
 .learning h2 {
-	font-size: 2rem;
-	margin-bottom: 2rem;
-	text-align: center;
-	font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 2rem;
+    text-align: center;
+    font-weight: bold;
 }
 
 .learning h4 {
-	text-transform: uppercase;
-	margin-bottom: 0.5rem;
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
 }
 
 .learning .row {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 2rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2rem;
 }
 
-.learning .row:last-child{
-	margin-bottom: 0;
+.learning .row:last-child {
+    margin-bottom: 0;
 }
 
 .learning .row .learn-item {
-	min-height: 13.75rem;
-	width: 13.75rem;
-	background: white;
-	margin-right: 2rem;
+    min-height: 13.75rem;
+    width: 13.75rem;
+    background: white;
+    margin-right: 2rem;
 }
 
 .learning .row .learn-item:last-child {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .learning .row .learn-item img {
-	width: 100%;
-	height: auto;
+    width: 100%;
+    height: auto;
 }
 
 .learning .row .learn-item .info {
-	padding: 1rem 1rem 1.5rem 1rem;
+    padding: 1rem 1rem 1.5rem 1rem;
 }
 
 .learning .row .learn-item .info h3 {
-	font-size: 1.2rem;
-	margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
 }
 
 @media only screen and (max-width: 479px) {
-	.learning {
-		background: white;
-		border-top: 1px solid lightgrey;
-		padding: 2rem 1rem;
-	}
+    .learning {
+        background: white;
+        border-top: 1px solid lightgrey;
+        padding: 2rem 1rem;
+    }
 
-	.learning h2 {
-		margin-bottom: 1rem;
-	}
+    .learning h2 {
+        margin-bottom: 1rem;
+    }
 
-	.learning .row {
-		justify-content: initial;
-		flex-direction: column;
-		margin: 0;
-		padding-bottom: 0.5rem;
-	}
+    .learning .row {
+        justify-content: initial;
+        flex-direction: column;
+        margin: 0;
+        padding-bottom: 0.5rem;
+    }
 
-	.learning .row:last-child {
-		padding-bottom: 0;
-	}
+    .learning .row:last-child {
+        padding-bottom: 0;
+    }
 
-	.learning .row .learn-item {
-		margin: 0;
-		width: inherit;
-		min-height: 0;
-		background: #D8D8D8;
-		padding: 0;
-		margin-bottom: 0.5rem;
-	}
+    .learning .row .learn-item {
+        margin: 0;
+        width: inherit;
+        min-height: 0;
+        background: #D8D8D8;
+        padding: 0;
+        margin-bottom: 0.5rem;
+    }
 
-	.learning .row .learn-item:last-child {
-		margin-bottom: 0;
-	}
+    .learning .row .learn-item:last-child {
+        margin-bottom: 0;
+    }
 
-	.learning .row .learn-item .info {
-		padding: 1rem;
-	}
+    .learning .row .learn-item .info {
+        padding: 1rem;
+    }
 
-	.learning .row .learn-item .info h3 {
-		margin-bottom: 0;
-	}
+    .learning .row .learn-item .info h3 {
+        margin-bottom: 0;
+    }
 }
 
 /* Thesis */
 
 .thesis .title {
-	text-align: center;
-	font-size: 2rem;
-	padding: 2rem 0;
-	font-weight: bold;
+    text-align: center;
+    font-size: 2rem;
+    padding: 2rem 0;
+    font-weight: bold;
 }
 
 .thesis .content {
-	display: flex;
+    display: flex;
 }
 
 .thesis .content .left {
-	padding: 0 1rem 0 1.5rem;
+    padding: 0 1rem 0 1.5rem;
 }
 
 .thesis .content .left video {
-	max-width: 100%;
+    max-width: 100%;
 }
 
 .thesis .content .left h2 {
-	font-size: 1.5rem;
-	padding: 1.5rem 0;
+    font-size: 1.5rem;
+    padding: 1.5rem 0;
 }
 
 .thesis .content .left p {
-	padding-bottom: 2rem;
+    padding-bottom: 2rem;
 }
 
 .thesis .content .right {
-	min-width: 26.4375rem;
+    min-width: 26.4375rem;
 }
 
 .thesis .content .right .box:first-child {
-	background: lightgrey;
+    background: lightgrey;
 }
 
 .thesis .content .right .box {
-	height: 10.5rem;
-	display: flex;
-	padding: 1rem;
-	align-items: center;
+    height: 10.5rem;
+    display: flex;
+    padding: 1rem;
+    align-items: center;
 }
 
 .thesis .content .right .box img {
-	height: 100%;
-	padding-right: 2rem;
+    height: 100%;
+    padding-right: 2rem;
 }
 
 .thesis .content .right .box .copy h3 {
-	font-size: 1.5rem;
-	margin-bottom: 0.5rem;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 
 .thesis .content .right .box .copy p {
-	margin-bottom: 0.5rem;
+    margin-bottom: 0.5rem;
 }
 
 @media only screen and (max-width: 479px) {
-	.thesis {
-		border-top: 1px solid lightgrey;
-	}
-
-	.thesis .content .left video {
-		margin-bottom: 2.5rem;
-	}
+    .thesis {
+        border-top: 1px solid lightgrey;
+    }
+    .thesis .content .left video {
+        margin-bottom: 2.5rem;
+    }
 }
 
 /* Footer */
 
 footer {
-	border-top: 1px solid lightgrey;
-	display: flex;
-	justify-content: space-between;
-	padding: 1rem 1.5rem;
+    border-top: 1px solid lightgrey;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 1.5rem;
 }
 
 footer ul li {
-	display: inline-flex;
-	padding-left: 0.5rem;
+    display: inline-flex;
+    padding-left: 0.5rem;
 }
